--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start",
     "lint": "eslint",
     "db:seed": "node prisma/seed.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "update-roles": "node scripts/update-roles.js"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "bcryptjs": "^3.0.2",
+    "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.2",
     "prisma": "^6.15.0",
