--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.2",
     "prisma": "^6.15.0",
+    "puppeteer": "^24.18.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.5"
